@@ -39,7 +39,15 @@ You'd want to add something like this to your ~/.gtkrc-2.0 file:
 
 style "xfdesktop-icon-view" {
     XfdesktopIconView::label-alpha = 75
+    XfdesktopIconView::selected-label-alpha = 100
     XfdesktopIconVIew::ellipsize-icon-labels = 1
+
+    XfdesktopIconView::shadow-x-offset = 1
+    XfdesktopIconView::shadow-y-offset = 1
+    XfdesktopIconView::shadow-color = "#ff0000"
+    XfdesktopIconView::selected-shadow-x-offset = 2
+    XfdesktopIconView::selected-shadow-y-offset = 2
+    XfdesktopIconView::selected-shadow-color = "#00ff00"
 
     XfdesktopIconVIew::cell-spacing = 6
     XfdesktopIconView::cell-padding = 6
@@ -55,12 +63,18 @@ style "xfdesktop-icon-view" {
 }
 widget_class "*XfdesktopIconView*" style "xfdesktop-icon-view"
 
-The first two entries set the opacity of the rounded text background
+The first three entries set the opacity of the rounded text background
 (allowed values are from 0 (totally transparent) to 255 (totally opaque),
 and whether or not unselected icons get their labels ellipsized
-(truncated) to fit on one line.
+(truncated) to fit on one line.  (The 'selected-' version controls the
+opacity of icons that have been selected with the mouse.)
 
-The second four entries set spacing and sizing for individual icons on
+The second six entries can be used to enable a text shadow to be painted
+with the icon labels.  The offsets are in pixels.  Setting them to 0 (the
+defaults) will disable the shadows entirely.  Again, the 'selected-'
+versions apply to icons that have been selected with the mouse.
+
+The third four entries set spacing and sizing for individual icons on
 the grid.  The 'cell-spacing' property specifies the spacing between each
 'cell' in the grid of icons.  The 'cell-padding' property sets extra
 padding placed around each icon+text.  The units for these two are in
@@ -69,7 +83,7 @@ width of the text label underneat the icon, as a multiplier of the icon
 width (so for 30px icons, '2.5' would leave a 75px wide area underneath
 for the text).
 
-The third three entries set the color of the rounded text background.
+The fourth three entries set the color of the rounded text background.
 * NORMAL sets the color for the regular, unselected state.
 * SELECTED sets the color for when the icon is selected, and the desktop has
   keyboard/mouse focus.
