@@ -29,6 +29,8 @@ Xfce 4.6beta1 (Xfce 4.5.91):
   * Add the ellipsize-icon-labels style property  to control whether
     or not unselected icons get their labels truncated (bug 2886).
     Patch from Daniel Gibson.
+  * Add style properties to enable painting a text shadow 'under' the
+    desktop icon text labels (bug 4412).  Patch from Andrea Santilli.
 
 
 Xfce 4.6alpha (Xfce 4.5.90):
